# pseudocode-efrei

./: CMakeLists.txt
example/: array.pseudocode
src/: main.c
src/Lexer/: Dictionary.c  Dictionary.h  Lexer.c  Lexer.h  Token.c  Token.h
src/Utils/: Utils.c  Utils.h
